fixed project button

--- a/this-site.html
+++ b/this-site.html
@@ -24,7 +24,7 @@
             
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link" href="index.html#profile" style="color: white">PROFILE</a>
+                      <a class="nav-link" href="index.html#top" style="color: white">PROFILE</a>
                     </li>
                     <li class="nav-item">
                       <a class="nav-link" href="index.html#experience" style="color: white">EXPERIENCE</a>
