Added photos to blog, added borders to other photo

--- a/blog.html
+++ b/blog.html
@@ -42,9 +42,12 @@
             </div>
             </nav>
           </div>
-          <div class="container">
+          <div class="container" >
         
             <h1 style="color: white">Should You Have a<br>Personal Website?</h1>
+            <div class="col-md-12" style="text-align:center">
+            <img src="images/webdesign-3411373_640.jpg" style="padding: 1px; border: 1px solid #000000">
+          </div>
             <h4 style="text-align: center; color: #909090">June 03, 2019</h4>
             <p style="color: white"><br><br>
             
@@ -76,11 +79,11 @@
           <div class="container-fluid">
               <div class="row">
                   <div class="col-md-6" style="text-align: center">
-                     <a href="http://www.suzannecollinsbooks.com/"> <img src="images/Suzanne Collins.png"  class="img-fluid" width="750" height="492" ></a>
+                     <a href="http://www.suzannecollinsbooks.com/"> <img src="images/Suzanne Collins.png"  class="img-fluid" width="750" height="492" style="padding: 1px; border: 1px solid #000000"></a>
                   </div>
 
                   <div class="col-md-6" style="text-align: center">
-                    <a href="http://art.yale.edu/"><img src="images/Yale.png"  class="img-fluid" width="750" height="492"></a>
+                    <a href="http://art.yale.edu/"><img src="images/Yale.png"  class="img-fluid" width="750" height="492" style="padding: 1px; border: 1px solid #000000"></a>
                 </div>
               </div>
           </div>
