--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
            <h4 style="text-align: center"><br><br>Hey, I'm Colby!</h4>
             <p style="text-align: center" >
                 <br><br>
-              I  a student at Washington State University studying computer science 
+              I'm a student at Washington State University studying computer science 
                 while working on graphic design and web development
                 in my free time.<br><br>
                 
