Update index html

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <strong>Highschool Diploma<br><br ></strong>
                 <span class="hidden-phone">I completed highschool with plans to become an engineer. Participated in baseball, basketball, golf and was captain of the football team. 
                   I was also a member of the school FFA team, National Honor Society and placed second place at the 
-                  <a class="navlink" href="http://wsm.wsu.edu/s/index.php?id=309" style="color: #FCA423">JETS/AbilityOne National Engineering
+                  <a class="navlink" href="https://magazine.wsu.edu/web-extra/video-garfield-palouse-students-building-pal/" style="color: #FCA423">JETS/AbilityOne National Engineering
                   Design Challenge </a> which was later became a part of <a class="navlink" href="https://tsaweb.org/competitions-programs/tsa/high-school-competitions" style="color: #FCA423"> 
                   Technology Student Association</a>. Following our success, Massachusetts Institute of Technology invited the team to another national competition as well as
                   awarding the school a grant of $10,000.
