--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
         <div class="col-md-3 text-center">
             <ul style="color: white" class="list-unstyled mb-0">
                 <li ><i class="fas fa-map-marker-alt fa-2x"></i>
-                    <p>Pullman, WA</p>
+                    <p>Colfax, WA</p>
                 </li>
 
                 <li><i class="fas fa-phone mt-4 fa-2x"></i>
