--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
         <div class="container" style="text-align: center">
             <div class="col-md-12">
             <img src="mysite.PNG" href="this-site.html" width="800" height="492" style="padding: 1px; border: 1px solid #000000" >
-            <h2><a href="this-site.html"  >This Website</a></h2>
+            <h2><a href="this-site.html"  style="color: #FCA423">This Website</a></h2>
           </div>
           </div>
       </div>
