--- a/index.html
+++ b/index.html
@@ -157,10 +157,11 @@
           <div class="col-md-8">
               <p>
                 <strong>Technical Assistant II<br><br ></strong>
-                <span class="hidden-phone">Using the reputation I had built at Desktop support I was able to easily transition to the Crimson Service Desk which is another 
-                  department within the WSU IT services. The main difference between the two jobs was that I was now assisting students with IT and account related issues rather
-                  than department staff. After one semester of working at CSD I was promoted to Technical Assistant II. Unfortunately I had to leave due to time constraints
-                  caused by the Covid-19 pandemic and the switch to an online learning environment. 
+                <span class="hidden-phone">Using the reputation I had built at Desktop support I was able to easily transition to the Crimson Service Desk. 
+                  The primary difference between the two jobs was that I was now assisting students with IT and account related issues rather
+                  than department staff. After one semester of working at CSD I was promoted to Technical Assistant II. Unfortunately I had to leave CSD due to time
+                  constraints caused by the Covid-19 pandemic and the switch to an online learning environment. Shortly before leaving CSD I was part of the team that
+                  was used to model the current operations of CSD on all WSU campuses.
     
                 </span>
               </p>
@@ -178,6 +179,7 @@
               <strong>Desktop Support IT Specialist<br><br ></strong>
               <span class="hidden-phone">I also worked at the university as an IT specialist. I troubleshot user issues as well as ensuring that all systems were up to date with
                 the latest software and maintaining images for department computers. In March of 2019 I was told Desktop support would no longer be employing students at the end of the semester.
+                Not one to sit idle, I reached out to someone I had done some work for while at Desktop support and by the end of the day had an interview scheuduled for the Crimson Service Desk. 
   
               </span>
             </p>
@@ -199,7 +201,7 @@
               Operations Supervisor, a position generally held by a Senior Non-commissioned Officer. After two years in Korea, I received the Air Force Achievement medal 
               and departed for Fort George Meade, MD.<br><br>
               While stationed in Maryland, my primary job was as a Target Analyst at the National Security Agency. My duties included working on reports and handling
-              administrative tasks. I finally separated and returned to Washington state after receiving the Joint Service Achievement medal. 
+              administrative tasks. I separated from the armed forces in 2017 and returned to Washington state after receiving the Joint Service Achievement medal. 
               
 
             </span>
