making text edits in work experience

--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         <div class="col-md-8">
             <p>
               <strong>Desktop Support IT Specialist<br><br ></strong>
-              <span class="hidden-phone">I also worked at the university as an IT specialist. I troubleshot user issues as well as ensuring that all systems were up to date with
+              <span class="hidden-phone">I worked at the university as an IT specialist. I troubleshot user issues as well as ensuring that all systems were up to date with
                 the latest software and maintaining images for department computers. In March of 2019 I was told Desktop support would no longer be employing students at the end of the semester.
                 Not one to sit idle, I reached out to someone I had done some work for while at Desktop support and by the end of the day had an interview scheuduled for the Crimson Service Desk. 
   
