updated AIr Force section with SNCO

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
             <span class="hidden-phone">
               While serving in the armed forces, my duties were those of a linguist and intelligence specialist. After completing the Korean course at the Defense 
               Language Institute, my first duty station was Osan Air Force Base, South Korea. I excelled at my position and within six months was promoted to Conventional 
-              Operations Supervisor, a position generally held by a Senior Non-commissioned Officer. After two years in Korea, I received the Air Force Achievement medal 
+              Operations Supervisor, a position generally held by a Senior Non-Commissioned Officer (SNCO). After two years in Korea, I received the Air Force Achievement medal 
               and departed for Fort George Meade, MD.<br><br>
               While stationed in Maryland, my primary job was as a Target Analyst at the National Security Agency. My duties included working on reports and handling
               administrative tasks. I separated from the armed forces in 2017 and returned to Washington state after receiving the Joint Service Achievement medal. 
