--- a/index.html
+++ b/index.html
@@ -301,16 +301,16 @@
                     </div>
 
                     <div class="progress violet">
-                        <h3 class="progress-title">Photoshop</h3>
+                        <h3 class="progress-title">Jira</h3>
                         <div class="progress-bar">
-                            <div class="progress-value" style="width: 60%;"></div>
+                            <div class="progress-value" style="width: 90%;"></div>
                         </div>
                     </div>
          
                     <div class="progress violet">
                         <h3 class="progress-title">Git</h3>
                         <div class="progress-bar">
-                            <div class="progress-value" style="width: 90%;"></div>
+                            <div class="progress-value" style="width: 80%;"></div>
                         </div>
                     </div>
                     </div>
